<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.orangemako.minesweeper.LandingPage.LandingPageActivity">

    <TextView
        android:text="@string/choose_difficulty"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.example.harelavikasis.shulamokshim.MainApp.view.BeveledTileTextView
        android:text="@string/easy_button"
        android:layout_height="wrap_content"
        android:id="@+id/easyButton"
        android:layout_marginTop="31dp"
        android:layout_width="match_parent"
        android:backgroundTint="@color/green_300"
        style="@style/Widget.AppCompat.Button"
        android:textSize="30sp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:onClick="chooseLevelTap"
        android:layout_weight="1"
        android:gravity="center"
        custom:innerRectColor="@color/green_300"
        custom:leftBevelColor="@color/blue_grey_400"
        custom:topBevelColor="@color/blue_grey_300"
        custom:rightBevelColor="@color/blue_grey_500"
        custom:bottomBevelColor="@color/blue_grey_700"
        custom:fillPercentage="0.75"/>

    <com.example.harelavikasis.shulamokshim.MainApp.view.BeveledTileTextView
        android:text="@string/medium_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/mediumButton"
        android:textSize="30sp"
        android:onClick="chooseLevelTap"
        style="@style/Widget.AppCompat.Button"
        android:layout_below="@+id/easyButton"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:backgroundTint="@color/blue_grey_400"
        android:layout_alignLeft="@+id/easyButton"
        android:layout_alignStart="@+id/easyButton"
        android:layout_weight="1"
        android:gravity="center"
        custom:innerRectColor="@color/amber_200"
        custom:leftBevelColor="@color/blue_grey_400"
        custom:topBevelColor="@color/blue_grey_300"
        custom:rightBevelColor="@color/blue_grey_500"
        custom:bottomBevelColor="@color/blue_grey_700"
        custom:fillPercentage="0.75"/>

    <com.example.harelavikasis.shulamokshim.MainApp.view.BeveledTileTextView
        android:text="@string/hard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/hardButton"
        android:layout_below="@+id/mediumButton"
        android:textSize="30sp"
        android:onClick="chooseLevelTap"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/mediumButton"
        android:layout_alignStart="@+id/mediumButton"
        android:layout_weight="1"
        android:gravity="center"
        custom:innerRectColor="@color/red_300"
        custom:leftBevelColor="@color/blue_grey_400"
        custom:topBevelColor="@color/blue_grey_300"
        custom:rightBevelColor="@color/blue_grey_500"
        custom:bottomBevelColor="@color/blue_grey_700"
        custom:fillPercentage="0.75"/>

    <com.example.harelavikasis.shulamokshim.MainApp.view.BeveledTileTextView
        android:text="@string/table_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:id="@+id/tableScoresButton"
        android:onClick="showRecoredsTap"
        style="@style/Widget.AppCompat.Button"
        android:textSize="18sp"
        android:layout_weight="1"
        android:gravity="center"
        custom:innerRectColor="@color/blue_400"
        custom:leftBevelColor="@color/blue_grey_400"
        custom:topBevelColor="@color/blue_grey_300"
        custom:rightBevelColor="@color/blue_grey_500"
        custom:bottomBevelColor="@color/blue_grey_700"
        custom:fillPercentage="0.75"/>

</RelativeLayout>
